# GenAI_hackathon_25

./: .gitignore
ai-startup-evaluator/: ADK_INTERVIEW_AGENT_README.md  CLOUDSQL_SETUP_GUIDE.md  CLOUD_RUN_DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  FRONTEND_INTEGRATION_README.md  GEMINI.md  GOOGLE_CALENDAR_SETUP.md  Makefile  cloud-run-config.yaml  cloudsql_config.env  cloudsql_config.py  demo_interview_workflow.py  deploy_agents_cloud_run.sh  deploy_agents_correct_flow.sh  deploy_all.sh  deploy_all_agents.sh  deploy_all_agents_to_engine.sh  deploy_backend.sh  deploy_frontend.sh  deploy_main_agent.sh  deploy_remaining_agents.sh  deploy_to_agent_engine.py  deploy_to_agent_engine.sh  deployment_metadata.json  live_voice_interview.py  main_agent.py  pyproject.toml  real_voice_interview.py  requirements.txt  run_interview_test.py  setup_cloudsql.py  setup_local.py  simple_voice_interview.html  start_local.sh  start_voice_agent.py  starter_pack_README.md  test_adk_interview_agent.py  test_deployed_agent.py  test_frontend_integration.py  (+3 more)
ai-startup-evaluator/.backup_ai-startup-evaluator_20250921_113511/: AGENT_ENGINE_DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  QUICKSTART.md  README.md  agent_config.yaml  cloud-run-config.yaml  deployment_manifest.json  live_text_interview.py  simple_agent_test.py  (+7 more)
ai-startup-evaluator/temp_agents/extractor_agent/.backup_extractor_agent_20250921_125124/: main.py  pyproject.toml
manager/: agent.py  evaluation_agent.py  scheduling_agent.py
startup-evaluation-platform/: .env.example  README.md  main.py  requirements.txt
(+208 files in other folders)
